# RToolBox

./: .gitignore  GenerateVS022.bat  README.md
RToolBox/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg-configuration.json  vcpkg.json
RToolBox/cmake/: CMakeCXXModules.cmake  ExecutableTargetType.cmake
RToolBox/examples/: CMakeLists.txt
RToolBox/examples/Resources/Windows/: Application.manifest  SampleGame.rc  resource.h
RToolBox/examples/SimpleGame/: CMakeLists.txt
RToolBox/examples/SimpleGame/src/: main.cpp
RToolBox/examples/SimpleGameMain/: CMakeLists.txt
RToolBox/examples/SimpleGameMain/src/: main.cpp
RToolBox/libraries/: CMakeLists.txt
RToolBox/libraries/RTBase/: CMakeLists.txt  CompileDefinitions_Windows.cmake
RToolBox/libraries/RTMain/: CMakeLists.txt
RToolBox/libraries/RTMain/src/: RTMain.cpp
RToolBox/libraries/RTMain/src/Platform/: RTMain_Windows.cpp
RToolBox/libraries/Vulkan/: CMakeLists.txt
RToolBox/modules/: RToolBox.cppm
RToolBox/modules/Application/: Application.cpp  Application.cppm
RToolBox/modules/Config/: Config.cppm
RToolBox/modules/Geometry/: Geometry.cppm  Line.cppm  Point.cppm
RToolBox/modules/Graphics/: CMakeLists.txt
RToolBox/modules/Graphics/Vulkan/: CMakeLists.txt  README.md
RToolBox/modules/Graphics/Vulkan/src/: Vulkan.cpp  Vulkan.cppm  Vulkan.inc  VulkanExtensions.inc  VulkanFunctions.inc  VulkanTypes.inc  Vulkan_Windows.cpp
RToolBox/modules/Renderer/: Renderer.cppm
RToolBox/modules/Renderer/VulkanProfiles/: vp_gpuinfo_nvidia_geforce_gtx_1050_ti_536_99_0_0_windows_10.json  vp_gpuinfo_nvidia_shield_tv_495_0_0_0_android_11_0.json
RToolBox/modules/System/: OutputDebugStringBuf.cppm  Window.cppm
